<resources>
    <string name="app_name" translatable="false">James</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="scan_code">Scan the restaurant\'s QR code</string>
    <string name="drinks_btn">DRINKS</string>
    <string name="food_btn">FOOD</string>
    <string name="icon_reading_description">icon displaying a phone reading a QR code</string>
    <string name="welcome_to">Welcome to Snizzles! Please make your order.</string>
    <string name="toolbar_drinks">DRINKS</string>
    <string name="toolbar_food">FOOD</string>
    <string name="add_item_description">add item from cart</string>
    <string name="remove_item_description">remove item from cart</string>
    <string name="btn_minus" translatable="false">-</string>
    <string name="btn_plus" translatable="false">+</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="order_btn">ORDER</string>
    <string name="total">TOTAL</string>
    <string name="mark_as_paid_btn">MARK AS PAID</string>
    <string name="pay_with_app_btn">PAY WITH APP</string>
    <string-array name="drawer_items">
        <item>Home</item>
        <item>Drinks</item>
        <item>Food</item>
        <item>Shopping cart</item>
        <item>Payment</item>
    </string-array>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="set_amount" translatable="false">%d</string>
    <string name="set_price">€%.1f</string>
    <string name="set_total_price_item">€%.1f</string>
    <string name="cancel_scan_toast">you cancelled the scan</string>
    <string name="see_you_toast">See you soon!</string>
    <string name="thanks_toast">Thanks for coming!</string>
    <string name="order_sent_toast">Your order has been sent to James!</string>
    <string name="error_toast">Uh-oh, an error occurred!</string>
    <string name="scan_content_description">click to scan the restaurant\'s menu</string>
    <string name="net_error_toast">network error, please check your connection</string>
    <string name="add_resto_btn">Add a restaurant to your todo list</string>
    <string name="remove_ads">remove ads</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="write_your_review">write your review</string>
    <string name="say_what_you_think">Say what you think of us here</string>
    <string name="insert">Insert</string>
    <string name="no_todos">Currently there are no Todo items maintained</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Todo</string>
    <string name="todo_summary">Summary</string>
    <string name="todo_description">Delete Todo</string>
    <string name="todo_edit_summary">Summary</string>
    <string name="todo_edit_description">Description</string>
    <string name="todo_edit_confirm">Confirm</string>
    <string name="list_icon">list icon</string>
    <string name="add_to_restaurant_list">ADD TO RESTAURANT LIST</string>
    <string name="enter_name">enter the name of the restaurant</string>
    <string name="resto_to_do">Resto to do list</string>
    <string name="press_long">Press long to delete an item</string>
    <string name="img_piggy">image of a piggy bank</string>
    <string name="refresh_btn">refresh button</string>
    <string name="add_name_toast">Please add a name</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4834738949519874/6453478946</string>
    <string name="view_list_restaurants">view list of restaurants</string>
    <string name="go_to_pay">Go to payment</string>
    <string name="go_to_payment">go to payment</string>
    <string name="order">order now</string>
    <string name="drinks_content">click to view drinks</string>
    <string name="click_food">click to view food</string>
    <string name="remove_ads_desc">click to remove ads</string>
    <string name="mark_paid">mark as paid button</string>
    <string name="pay_button">pay with app button</string>
    <string name="click_resto">click to add your favourite restaurants</string>
    <string name="submit_btn">submit button</string>
</resources>
