<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    card_view:cardCornerRadius="0dp"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/menu_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="@dimen/tv_margintop"
            android:layout_weight="4"
            android:textSize="@dimen/item_text_size" />

        <TextView
            android:id="@+id/price_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tv_margintop"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:textSize="@dimen/cv_text_size" />

        <Button
            android:id="@+id/minus_button"
            style="@style/menu_buttons"
            android:contentDescription="@string/remove_item_description"
            android:gravity="center"
            android:text="@string/btn_minus"
            android:layout_marginTop="@dimen/mt_button_cv"/>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cv_tv_marginleft"
            android:layout_marginStart="@dimen/cv_tv_marginleft"
            android:layout_marginTop="@dimen/tv_margintop"
            android:layout_weight="0.5"
            android:textSize="@dimen/cv_text_size" />

        <Button
            android:id="@+id/plus_button"
            style="@style/menu_buttons"
            android:contentDescription="@string/add_item_description"
            android:src="@drawable/plus_icon"
            android:text="@string/btn_plus"
            android:layout_marginTop="@dimen/mt_button_cv"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tv_marginleft"
            android:layout_marginStart="@dimen/tv_marginleft"
            android:layout_marginTop="@dimen/tv_margintop"
            android:layout_weight="1"
            android:textSize="@dimen/cv_text_size"/>

    </LinearLayout>

</android.support.v7.widget.CardView>



