<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:weightSum="1">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/payment_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".PaymentActivity" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/total_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:layout_above="@+id/mark_paid_btn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/total_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20eur"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_alignTop="@+id/total_tv"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/mark_paid_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_as_paid_btn"
            style="@style/buttons"
            android:onClick="onClickPaid"
            android:padding="5dp"
            android:layout_above="@+id/pay_app_btn"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/pay_app_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_with_app_btn"
            style="@style/buttons"
            android:padding="5dp"
            android:onClick="onClickPay"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/mark_paid_btn"
            android:layout_alignStart="@+id/mark_paid_btn" />
    </RelativeLayout>




</RelativeLayout>
